# SCodeHDL

./: .gitignore  LICENSE  README.md  ReleaseNote.md  pyproject.toml
src/: _s2.py  ast_exec.py  ast_signal.py  hgenerator.py  hmodule.py  hparser.py  hpostproc.py  hsignal.py  hsimulation.py  hstructure.py  htestbench.py  hverification.py  parser_common.py  parser_verilog.py  parser_vhdl.py  pyparsing.py  run_fuse.py  run_scode.py  sc_api.py  sc_json_export.py  sc_util.py  unparser.py
src/codegen/: cg_verilog.py  cg_vhdl.py
src/lib/: __init__.py  core_beta.sh  core_lib.sh  xilinx_lib.sh
src/plugin/: scplugin_latency.py  scplugin_moduleinfo.py  scplugin_simulate_isim.py  scplugin_unparse.py  test.sc  test.txt  test.vhd  unparser.py
src/scode/: __init__.py  scode.py  ssim.py
src/scode.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
