[project]
name = "scode"
version = "1.0.0"
description = "Hardware Description Language Generator"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
scode = "scode.cli:main"
ssim = "scode.ssim:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["scode", "codegen", "lib"]

[tool.setuptools.package-data]
lib = ["*.sh"]
py-modules = [
    "_s2", "ast_exec", "ast_signal", "hgenerator",
    "hmodule", "hparser", "hpostproc", "hsignal", "hsimulation", "htestbench",
    "hstructure", "hverification", "parser_common", "parser_verilog", "parser_vhdl", "pyparsing",
    "run_fuse", "run_scode", "sc_api", "sc_json_export", "sc_util",
    "unparser"
]
